# nlp-summarization

./: .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/src/: config.py  fetch.py  main.py  models.py  nlp.py  server.py
backend/src/sentiment/: config.py  fetch.py  main.py  models.py  nlp.py  profilers.py  server.py
backend/src/sentiment/logging/: logging_dev.conf  logging_local.conf
backend/test/: test_nlp.py
backend/test/stress_tests/: payload.json
backend/test/unit_tests/: test_nlp.py
